--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
 	},
 	"dependencies": {
 		"axios": "^0.21.1",
-		"next": "10.2.0",
+		"next": "^11.0.0",
 		"react": "17.0.2",
 		"react-dom": "17.0.2",
 		"sass": "^1.32.12"
+	},
+	"devDependencies": {
+		"@types/next": "^9.0.0",
+		"@types/node": "^15.12.2",
+		"@types/react": "^17.0.11",
+		"typescript": "^4.3.2"
 	}
 }
